checker/tests/input/universal-types/ill-typed/extra-bad-universal-types-2.stella
language core;

extend with
  #universal-types;

fn f(x : Nat) -> Nat {
  return x;
}

fn main(x : Nat) -> Nat {
  return f[Nat](x)
}
